--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "neuraln0ne-portfolio",
-  "homepage": "https://pylneuralnet.github.io/portfolio-github-pages/",
+  "name": "pylneuralnet-portfolio",
+  "homepage": "https://pylneuralnet.github.io/portfolio-github-pages",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "prop-types": "^15.8.1",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^4.2.2"
   },
   "scripts": {
     "predeploy": "npm run build",
